Fix: no scrollbar displayed when there are too many listings in search view

--- a/assets/scss/app/apps/_listings.scss
+++ b/assets/scss/app/apps/_listings.scss
@@ -502,7 +502,6 @@ $search__search-bar-height: 3.5rem;
 }
 .listing-search__content {
     overflow-y: auto;
-    overflow: hidden;
     border-right: 1px solid #DDD;
 }
 .listing-search__location-input-container {
